# pypmd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  check_small_n_parity.py  compare_with_r_csv.py  config.py  fit_lambda_model.py  generate_report.py  plot_characterize_pmd.py  plot_invariance.py  plot_lambda.py  plot_pmd_focus.py  run_all_benchmarks.py  run_characterize_pmd.py  run_fixed_union_private.py  run_full_benchmark.py  run_invariance_property.py  run_multi_config.py  summarize_results.py  validate_invariance_linear.py  validate_invariance_onehot.py  validate_invariants.py  validate_monotonicity.py
docs/benchmarking/: annotation_audit.md  diffs_vs_R.md  first_implementation_strategy.md  parallelization.md  second_implementation_strategy.md  ssot_parallel_runner.md
docs/benchmarking/statistical_testing/: first_draft.md  fourth_draft.md  implementation_plan.md  methods_math.md  second_draft.md  third_draft.md
percent_max_diff/: __init__.py  benchmarking.py  percent_max_diff.py
pypmd/: __init__.py
tests/: test_benchmarking_invariants.py  test_config_ssot.py  test_invariance_axes_and_density.py  test_neglog10_logsf.py  test_plot_focus_lambda.py  test_plot_lambda_k_styles.py  test_pseudocount_policy.py  test_run_all_parallel.py  test_run_simulation_grid_workers.py  test_validate_invariance_onehot.py
