[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percent_max_diff"
version = "0.99.5"
description = "Percent Maximum Difference (PMD) for count-composition comparisons"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Scott Tyler", email = "scottyler89@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.16.0",
  "scikit-learn",
  "h5py>=2.9.0",
  "matplotlib>=3.0.2",
  "scipy>=1.2.0",
  "numba",
  "statsmodels",
  "pandas",
  "ray",
]

[project.urls]
Homepage = "https://github.com/your-org-or-user/percent_max_diff"
Issues = "https://github.com/your-org-or-user/percent_max_diff/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["percent_max_diff*", "pypmd*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
benchmark = [
  "tqdm>=4.65",
  "seaborn>=0.12",
  "scikit-bio>=0.6.0; python_version<'3.13'",  # optional; skip if incompatible
  "polars>=0.20; platform_system!='Windows'",   # optional
]
